fix overflow for contacts

--- a/source/less/components/contacts.less
+++ b/source/less/components/contacts.less
@@ -9,7 +9,7 @@
   }
 
   @media @desktop {
-    height: 457px;
+    min-height: 457px;
     padding: 0;
     margin-top: 70px;
     margin-bottom: 106px;
